text alignment fixed, line-through fixed/less aggressive

--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ form{
 span{
     width: 160px;
     font-size: 30px;
+    word-wrap: break-word;
+    display: inline-block;
 }
 
 form input{
@@ -42,27 +44,16 @@ ul li{
     flex-direction: row;
     width: 500px;
     justify-content: space-between;
+    align-items: center;
     line-height: 50px;
 }
 
-.checkItem{
-    margin-top: 12px;
-}
-
 .active-item{
-    color: red;
     text-decoration: line-through;
 }
 
-.removeItem{
-    height: 20px;
-    width: 20px;
-    margin-top: 10px;
-}
-
-.editItem{
-    height: 20px;
-    margin-top: 10px;
+.grayed-out{
+    background-color: gray;
 }
 
 #myList button{
@@ -79,5 +70,6 @@ ul li{
     width: 25px;
     background-color: #eee;
 }
+
 
 
